--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -3,6 +3,34 @@
 
 {% block content%}
 
-<h1>Customers</h1>
+<br>
+
+<div class="row">
+    <div class="col-md">
+        <div class="card card-body">
+            <h5>Customer:</h5>
+            <hr>
+            <a href="" class="btn btn-outline-info btn-sm btn-block"> Update Customer</a>
+            <a href="" class="btn btn-outline-danger btn-sm btn-block"> delete Customer</a>
+
+        </div>
+    </div>
+    <div class="col-md">
+        <div class="card card-body">
+           <h5>Contact Information</h5>
+           <hr>
+           <p>E-mail:</p>
+           <p>phone:</p>
+        </div>
+    </div>
+
+    <div class="col-md">
+        <div class="card card-body">
+           <h5>Total orders</h5>
+           <hr>
+           <h1 style="text-align: center;padding: 10px;"></h1>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
