--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -9,6 +9,15 @@
         <div class="card card-body">
             <h5>Products</h5>
         </div>
+        <div class="card card-body">
+          <table class="table">
+            <tr>
+                <th>Product</th>
+                <th>Category</th>
+                <th>Price</th>
+            </tr>
+          </table>
+        </div>
     </div>
 </div>
 
