--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,23 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
 <style>
    
-   #logo{
-
-   }
-   body{
-        background-color: #ebeff5;
-    }
-    #total-orders{
-        background-color: #4cb4c7;
-    }
-    #orders-delivered{
-        background-color: #7abecc;
-    }
-    #orders-pending{
-        background-color: #7CD1C0;
-    }
+ 
 </style>
 </head>
 <body class="container ">
