--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -15,8 +15,17 @@
             <table class="table table-sm">
                 <tr>
                     <th>Customer</th>
-                    <th>Orders</th>
+                    <th>phone</th>
                 </tr>
+                
+                {% for customer in customers %}
+
+                <tr>
+                    <td>{{customer.name}}</td>
+                    <td>{{customer.phone}}</td>
+                </tr>
+
+                {% endfor %}
             </table>
         </div>
  
@@ -35,6 +44,19 @@
                     <th>update</th>
                     <th>remove</th>
                 </tr>
+                {% for order in orders %}
+
+                <tr>
+                  
+                    <td>{{order.product}}</td>
+                    <td>{{order.date_created}}</td>
+                    <td>{{order.status}}</td>
+                    <td><a href="" class="btn btn-outline-info btn-sm">Update</a></td>
+                    <td><a href="" class="btn btn-outline-danger btn-sm">Delete</a></td>
+                </tr>
+
+                {% endfor %}
+
             </table>
         </div>
     
