--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -1,6 +1,7 @@
 
 {% block content %}
 
+
 <br>
 <div class="row">
     <div class="col">
@@ -10,7 +11,7 @@
                 <h5 class="card-title">Total Orders</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{total_orders}}</h3>
                 </div>
             </div>
         </div>
@@ -23,7 +24,7 @@
                 <h5 class="card-title">Orders Delivered</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{delivered}}</h3>
                 </div>
             </div>
         </div>
@@ -36,7 +37,7 @@
                 <h5 class="card-title">Orders Pending</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{pending}}</h3>
                 </div>
             </div>
         </div>
