--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -11,7 +11,7 @@
         <h5>CUSTOMERS:</h5>
         <hr>
         <div class="card card-body">
-            <a href="" class="btn btn-primary btn-sm btn-block">create customer</a>
+            <a href="{% url 'create-customer'  %}" class="btn btn-primary btn-sm btn-block">create customer</a>
             <table class="table table-sm">
                 <tr>
                     <th>Customer</th>
@@ -35,7 +35,7 @@
         <h5>LAST 5 ORDERS</h5>
         <hr>
         <div class="card card-body">
-            <a href="" class="btn btn-primary btn-sm btn-block">create order</a>
+            <!-- <a href="" class="btn btn-primary btn-sm btn-block">create order</a> -->
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
