--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" >
 <style>
    
- 
+   .form{
+    display: flex !important;
+    flex-direction: column !important;
+}
+label {
+    padding-top: 10px !important;
+    display: block;
+}
+#button {
+    border: 1px solid #757575;
+    background-color: #FFF;
+    color: #555;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
 </style>
 </head>
 <body class="container ">
