--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -29,7 +29,7 @@
         <div class="card card-body">
            <h5>Total orders</h5>
            <hr>
-           <h1 style="text-align: center;padding: 10px;"></h1>
+           <h1 style="text-align: center;padding: 10px;">{{orders}}</h1>
         </div>
     </div>
 </div>
