--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -20,7 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/products">Products</a>
           </li>
-
+<!-- <li class="text-white">
+  Hello {{request.user}}
+</li> -->
         </ul>
       </div>
     </div>
