--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -20,7 +20,7 @@
            <hr>
     
            <p>E-mail: {{customer.email}}</p>
-           <p>Phone:  {{customer.name}}</p>
+           <p>Name:  {{customer.name}}</p>
         </div>
     </div>
 
@@ -28,7 +28,7 @@
         <div class="card card-body">
            <h5>Total orders</h5>
            <hr>
-        <h1 style="text-align: center; padding: 10px;">{{orders}}</h1>
+        <h1 style="text-align: center; padding: 10px;">{{order_count}}</h1>
         </div>
     </div>
 </div>
@@ -53,11 +53,20 @@
                     <th>Category</th>
                     <th>Date Ordered</th>
                     <th>Status</th>
-                    <th>Update</th>
                     <th>Remove</th>
                 </tr>
 
-                
+                {% for order in orders %}
+
+                <tr>
+                    <td>{{order.product}}</td>
+                    <td>{{order.product.category}}</td>
+                    <td>{{order.date_created}}</td>
+                    <td>{{order.status}}</td>
+                    <td><a href="{% url 'delete_order' order.id %}" class="btn btn-danger btn-sm">remove</a></a></td>
+                </tr>
+             
+                {% endfor %}
             </table>
         </div>
     </div>
