--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -10,6 +10,7 @@
             <h5>Products</h5>
         </div>
         <div class="card card-body">
+          <a href="{% url 'create-order' %}" class="btn btn-primary btn-sm btn-block">Create Product</a>
           <table class="table">
             <tr>
                 <th>Product</th>
