--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-md-7">
-        <h5>LAST 5 ORDERS</h5>
+        <h5>RECENT ORDERS</h5>
         <hr>
         <div class="card card-body">
             <a href="{% url 'create-order' %}" class="btn btn-primary btn-sm btn-block">Create order</a>
