--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -11,7 +11,7 @@
             <hr>
             <a href="" class="btn btn-outline-info btn-sm btn-block">Update Customer</a>
             <br>
-            <a href="" class="btn btn-outline-danger btn-sm btn-block">Delete Customer</a>
+            <a href="{% url 'delete_customer' customer.id %}" class="btn btn-outline-danger btn-sm btn-block">Delete Customer</a>
         </div>
     </div>
     <div class="col-md">
