--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -16,6 +16,7 @@
                 <th>Product</th>
                 <th>Category</th>
                 <th>Price</th>
+                <th>Remove</th>
             </tr>
           {% for i in products %}
                           
@@ -23,6 +24,9 @@
            <td> {{i.name}}</td>
            <td> {{i.category}}</td>
            <td> {{i.price}}</td>
+           <td>
+            <a href="{% url 'delete-product' i.id %}" class="btn btn-outline-danger ">Delete</a>
+        </td>
           </tr>
 
           {% endfor %}
