--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -13,12 +13,32 @@
     />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <style>
-label{
+/* #logo{
+
+} */
+body{
+     background-color: #ebeff5;
+ }
+ #total-orders{
+     background-color: #4cb4c7;
+ }
+ #orders-delivered{
+     background-color: #7abecc;
+ }
+ #orders-pending{
+     background-color: #7CD1C0;
+ }
+
+ label{
     display: block;
 }
+body {
+  margin: 0 30px 30px;
+}
+
     </style>
   </head>
-  <body class="container">
+  <body class="">
     {% include 'accounts/navbar.html' %} {% block content%} {% endblock %}
     <hr />
     
