--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -16,25 +16,31 @@
 /* #logo{
 
 } */
-body{
-     background-color: #ebeff5;
- }
- #total-orders{
-     background-color: #4cb4c7;
- }
- #orders-delivered{
-     background-color: #7abecc;
- }
- #orders-pending{
-     background-color: #7CD1C0;
- }
 
- label{
-    display: block;
+
+body{
+    background-color: #ebeff5;
+}
+#total-orders{
+    background-color: #4cb4c7;
+}
+#orders-delivered{
+    background-color: #7abecc;
+}
+#orders-pending{
+    background-color: #7CD1C0;
+}
+
+label{
+   display: block;
 }
 body {
-  margin: 0 30px 30px;
+ margin: 0 30px 30px;
 }
+a{
+ text-decoration: none;
+}
+
 
     </style>
   </head>
